--- a/packages/contract-constructor/package.json
+++ b/packages/contract-constructor/package.json
@@ -13,7 +13,8 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@truffle/config": "^1.2.34"
+    "@truffle/config": "^1.2.34",
+    "web3-core-promievent": "1.2.9"
   },
   "devDependencies": {
     "@types/mocha": "^8.0.0",
