--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -23,6 +23,7 @@
     "@truffle/compile-solidity": "^5.1.10",
     "@truffle/config": "^1.2.35",
     "@truffle/contract": "^4.3.8",
+    "@truffle/contract-constructor": "^0.1.0",
     "@truffle/contract-sources": "^0.1.11",
     "@truffle/debug-utils": "^5.0.10",
     "@truffle/debugger": "^8.0.14",
