--- a/packages/contract-constructor/package.json
+++ b/packages/contract-constructor/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "@truffle/config": "^1.2.34",
-    "web3-core-promievent": "1.2.9"
+    "web3-core-promievent": "1.2.9",
+    "web3-utils": "1.2.9"
   },
   "devDependencies": {
     "@types/mocha": "^8.0.0",
